<resources>
    <string name="app_name">Students</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_student">Student</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_students">Students</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_admin">Administration</string>
    <string name="title_activity_journal">Journal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
